<resources>
    <string name="app_name">Эти дни…</string>
    <string name="message_label">Комментарий</string>



    <string name="menu_calendar">Календарь</string>
    <string name="menu_today">Сегодня</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_first_launch">Первый запуск</string>

    <string name="monthly_length">Длительнсть</string>
    <string name="monthly_period">Цикл</string>
    <string name="monthly_first_date">Начало последних месячных</string>
    <string name="period_days">дня(ей)</string>

    <string name="action_cancel">Отменить</string>
    <string name="action_added">Добавлено</string>
    <string name="action_canceled">Отменено</string>
    <string name="action_save">Сохранить</string>
    <string name="action_saved">Сохранено</string>
    <string name="action_deleted">Удалено</string>
    <string name="action_add_monthly">Отметить месячные</string>

    <string name="view_days_left">осталось</string>
    <string name="view_days_pattern">%s\n%s день цикла\nМесячные через\n %s %s</string>
    <string name="view_day_one">день</string>
    <string name="view_day_two">дней</string>
    <string name="view_day_three">дня</string>

    <string name="event_type_monthly">Месячные</string>
    <string name="event_type_sex">Секс</string>
    <string name="event_type_sex_unsafe">Незащищенный секс</string>
    <string name="event_type_ovulation">Овуляция</string>
    <string name="event_type_message">Заметка</string>

    <string name="calendar_monday">пн</string>
    <string name="calendar_tuesday">вт</string>
    <string name="calendar_wednesday">ср</string>
    <string name="calendar_thursday">чт</string>
    <string name="calendar_friday">пт</string>
    <string name="calendar_saturday">сб</string>
    <string name="calendar_sunday">вс</string>

    <string name="calendar_january">Январь</string>
    <string name="calendar_february">Февраль</string>
    <string name="calendar_march">Март</string>
    <string name="calendar_april">Апрель</string>
    <string name="calendar_may">Май</string>
    <string name="calendar_june">Июнь</string>
    <string name="calendar_july">Июль</string>
    <string name="calendar_august">Август</string>
    <string name="calendar_september">Сентябрь</string>
    <string name="calendar_october">Октябрь</string>
    <string name="calendar_november">Ноябрь</string>
    <string name="calendar_december">Декабрь</string>
</resources>