<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.activities.SettingsActivity">

    <include
        layout="@layout/layout_app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLight"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/monthlyLengthTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/monthlyLength"
                android:text="@string/monthly_length"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <EditText
                android:id="@+id/monthlyLength"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/monthlyLengthTitle" />

            <TextView
                android:id="@+id/monthlyLengthDays"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/period_days"
                app:layout_constraintBottom_toBottomOf="@id/monthlyLength"
                app:layout_constraintLeft_toRightOf="@id/monthlyLength"
                app:layout_constraintTop_toBottomOf="@id/monthlyLengthTitle" />

            <TextView
                android:id="@+id/monthlyPeriodTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/monthlyPeriod"
                android:text="@string/monthly_period"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/monthlyLength" />

            <EditText
                android:id="@+id/monthlyPeriod"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/monthlyPeriodTitle" />

            <TextView
                android:id="@+id/monthlyPeriodDays"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/period_days"
                app:layout_constraintBottom_toBottomOf="@id/monthlyPeriod"
                app:layout_constraintLeft_toRightOf="@id/monthlyPeriod"
                app:layout_constraintTop_toBottomOf="@+id/monthlyPeriodTitle" />

            <TextView
                android:id="@+id/monthlyFirstDateLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/monthlyFirstDate"
                android:text="@string/monthly_first_date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/monthlyPeriod" />

            <EditText
                android:id="@+id/monthlyFirstDate"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/monthlyFirstDateLabel" />

            <Button
                android:id="@+id/saveSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_save"
                app:layout_constraintTop_toBottomOf="@id/monthlyFirstDate" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
